syntax = "proto3";

import "google/protobuf/empty.proto";

package stateful;

service Stateful {
  rpc SetData (SetDataRequest) returns (google.protobuf.Empty) {}
  rpc GetData (GetDataRequest) returns (GetDataResponse) {}
}

message SetDataRequest {
  uint64 device = 1;
  bytes data = 2;
}

message GetDataRequest {
  uint64 device = 1;
}

message GetDataResponse {
  bytes data = 1;
}